--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/ac42c3b1f7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <title>To-Do list </title>
+    <link rel="icon" type="image/png" href="images\logo.png" sizes="16x16">
   </head>
   <body>
     <div class="todos-bg-container">
